# DEEP608v5-Day-1

./: .gitignore  README.md
guide/: chapter1.md  chapter2.md  chapter3.md  chapter4.md
infrastructure/: terraform.tf  variables.tf
services/block-page/: Dockerfile  index.html
services/edl/: Dockerfile  app.py
services/edl-admin/: Dockerfile  go.mod  go.sum  main.go
services/edl-admin/assets/: index.html
services/request-unblock/: Cargo.toml  Dockerfile  Rocket.toml
services/request-unblock/src/: main.rs
services/request-unblock/templates/: index.hbs  submitted.hbs
