[package]
name = "request-unblock"
version = "0.1.0"
authors = ["Dan Placek <dan@placek.email>"]
edition = "2018"
publish = false

[dependencies]
rocket = "0.4.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["handlebars_templates"]

[dependencies.redis]
version = "*"